完成sso-test，基本完成整个sso系统的设计与测试，并添加相关文档

--- a/sso/sso-core/src/main/resources/application.yml
+++ b/sso/sso-core/src/main/resources/application.yml
@@ -46,7 +46,7 @@ spring:
       content-type: text/html
 
 mybatis:
-  type-aliases-package: com.fhb.sso.core.domain
+  type-aliases-package: com.fhb.common.domain
   mapper-locations: classpath:mapper/*.xml
 
 
