--- a/sso/sso-test/src/main/resources/application.yml
+++ b/sso/sso-test/src/main/resources/application.yml
@@ -48,9 +48,9 @@ spring:
       content-type: text/html
 
 mybatis:
-  type-aliases-package: com.fhb.sso.core.domain
+  type-aliases-package: com.fhb.common.domain
   mapper-locations: classpath:mapper/*.xml
 server:
-  port: 8081
+  port: 8082
 
 
